# online-news-api

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: config.rs  errors.rs  main.rs
src/api/: handlers.rs  response.rs  routes.rs
src/api/middleware/: auth.rs  rate_limiter.rs
src/domain/: mod.rs  models.rs  tier.rs
src/infrastructure/: elasticsearch.rs
src/services/: mod.rs  news_service.rs
